[需求] 优化自动化api创建方式
