# server/api/blog/controller/logic/tb_comment.ctl.go
@@ -2,6 +2,7 @@ package logic
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/spf13/cast"
 
 	"github.com/ve-weiyi/ve-blog-golang/server/api/blog/model/request"
 	"github.com/ve-weiyi/ve-blog-golang/server/api/blog/model/response"
@@ -51,7 +52,7 @@ func (s *CommentController) FindCommentDetailList(c *gin.Context) {
 // @Param		page	body		request.PageQuery	true	"分页参数"
 // @Success		200		{object}	response.Response{data=any}	"返回信息"
 // @Router		/admin/comments [post]
-func (s *CommentController) GetComments(c *gin.Context) {
+func (s *CommentController) FindCommentBackList(c *gin.Context) {
 	reqCtx, err := s.GetRequestContext(c)
 	if err != nil {
 		s.ResponseError(c, err)
@@ -66,7 +67,7 @@ func (s *CommentController) GetComments(c *gin.Context) {
 	}
 
 	s.Log.JsonIndent(page)
-	list, total, err := s.svcCtx.CommentService.FindCommonBackList(reqCtx, &page)
+	list, total, err := s.svcCtx.CommentService.FindCommentBackList(reqCtx, &page)
 	if err != nil {
 		s.ResponseError(c, err)
 		return
@@ -78,4 +79,69 @@ func (s *CommentController) GetComments(c *gin.Context) {
 		Page:     page.Page,
 		PageSize: page.Limit(),
 	})
+}
+
+// @Tags		Comment
+// @Summary		查询评论回复列表
+// @Security	ApiKeyAuth
+// @accept		application/json
+// @Produce		application/json
+// @Param		id		path		int								true	"id"
+// @Param		page	body		request.PageQuery				true	"请求body"
+// @Success		200		{object}	response.Response{data=entity.Comment}	"返回信息"
+// @Router		/comment/{id}/reply_list [post]
+func (s *CommentController) FindCommentReplyList(c *gin.Context) {
+	reqCtx, err := s.GetRequestContext(c)
+	if err != nil {
+		s.ResponseError(c, err)
+		return
+	}
+
+	id := cast.ToInt(c.Param("id"))
+
+	var page request.PageQuery
+	err = s.ShouldBind(c, &page)
+	if err != nil {
+		s.ResponseError(c, err)
+		return
+	}
+
+	list, total, err := s.svcCtx.CommentService.FindCommentReplyList(reqCtx, id, &page)
+	if err != nil {
+		s.ResponseError(c, err)
+		return
+	}
+
+	s.ResponseOk(c, response.PageResult{
+		List:     list,
+		Total:    total,
+		Page:     page.Page,
+		PageSize: page.Limit(),
+	})
+}
+
+// @Tags		Comment
+// @Summary		点赞评论
+// @Security	ApiKeyAuth
+// @accept		application/json
+// @Produce		application/json
+// @Param		id		path		int							true		"id"
+// @Success		200		{object}	response.Response{data=entity.Comment}	"返回信息"
+// @Router		/comment/{id}/like [post]
+func (s *CommentController) LikeComment(c *gin.Context) {
+	reqCtx, err := s.GetRequestContext(c)
+	if err != nil {
+		s.ResponseError(c, err)
+		return
+	}
+
+	id := cast.ToInt(c.Param("id"))
+
+	data, err := s.svcCtx.CommentService.LikeComment(reqCtx, id)
+	if err != nil {
+		s.ResponseError(c, err)
+		return
+	}
+
+	s.ResponseOk(c, data)
 }
