# server/api/blog/service/logic/tb_comment.sv.go
@@ -35,7 +35,7 @@ func (s *CommentService) FindCommentDetailList(reqCtx *request.Context, page *re
 
 	for _, item := range commentList {
 		// 查询评论下所有回复列表,只显示五条
-		replyList, count, _ := s.FindCommonReplyList(reqCtx, item.ID, &request.PageQuery{
+		replyList, count, _ := s.FindCommentReplyList(reqCtx, item.ID, &request.PageQuery{
 			Page:     1,
 			PageSize: 5,
 		})
@@ -73,7 +73,7 @@ func (s *CommentService) FindCommentDetailList(reqCtx *request.Context, page *re
 }
 
 // 查询Comment记录
-func (s *CommentService) FindCommonReplyList(reqCtx *request.Context, commentId int, page *request.PageQuery) (list []*response.ReplyDTO, total int64, err error) {
+func (s *CommentService) FindCommentReplyList(reqCtx *request.Context, commentId int, page *request.PageQuery) (list []*response.ReplyDTO, total int64, err error) {
 	// 查询评论下所有回复列表
 	replyList, total, _ := s.svcCtx.CommentRepository.FindCommentReplyList(commentId, page)
 
@@ -132,7 +132,7 @@ func (s *CommentService) FindCommonReplyList(reqCtx *request.Context, commentId 
 }
 
 // 查询Comment后台记录
-func (s *CommentService) FindCommonBackList(reqCtx *request.Context, page *request.PageQuery) (list []*response.CommentBackDTO, total int64, err error) {
+func (s *CommentService) FindCommentBackList(reqCtx *request.Context, page *request.PageQuery) (list []*response.CommentBackDTO, total int64, err error) {
 	// 使用用户昵称查询
 	username := page.FindCondition("username")
 	if username != nil {
